# GPTTT

./: .gitignore  Dockerfile  client.py  infer.py  inference.py  inference_onnx.py  pyproject.toml  to_onnx.py  train.py
.dvc/: config
app/: model.onnx  server.py
configs/: config.yaml
configs/data/: default.yaml
configs/model/: default.yaml
configs/trainer/: default.yaml
lightning_logs/version_0/: hparams.yaml  metrics.csv
outputs/2026-03-01/08-25-50/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-02/20-02-04/.hydra/: hydra.yaml
outputs/2026-03-02/20-12-17/.hydra/: hydra.yaml
outputs/2026-03-02/20-14-07/.hydra/: hydra.yaml
outputs/2026-03-02/20-14-32/.hydra/: hydra.yaml
outputs/2026-03-02/20-15-27/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-02/22-47-13/.hydra/: hydra.yaml
outputs/2026-03-02/22-48-56/.hydra/: hydra.yaml
src/: data.py  model.py
