[project]
name = "gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.2",
    "onnxscript>=0.6.2",
    "pytorch-lightning>=2.6.1",
    "torch>=2.10.0",
]
